formatting broke jeykll oh well

--- a/wiki/threads/3830.md
+++ b/wiki/threads/3830.md
@@ -2,6 +2,6 @@
 Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">gunrock12</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">gunrock12</span></span>:</strong>
 
-<p class="archive-post">Just asking if someone could please convert these  shadowman .seanim animations into xanim_export for me?<br />i would very grateful as i failed to get blender going and gave up with maya. theres only 4 files i need converted.<br />that is all thank you.</p>
+<p>Just asking if someone could please convert these  shadowman .seanim animations into xanim_export for me?<br />i would very grateful as i failed to get blender going and gave up with maya. theres only 4 files i need converted.<br />that is all thank you.</p>
