--- a/wiki/threads/3849.md
+++ b/wiki/threads/3849.md
@@ -2,32 +2,44 @@
 Game Modding | Call of Duty: Black Ops 3 | Radiant
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong>
 
-<p class="archive-post">Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.<br /><br />********************************************************************************<br /><br />UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering<br /><br /><br />Linker will now terminate.<br /><br />********************************************************************************<br />has anyone seen it before? I&#39;ve peeked through all the materials and can&#39;t find anything out of the ordinary. it was originally <br />right after &#39;c_zom_dlc4_apothicon_fury_dissolve&#39; in the first error in the linker, but in subsequent links it&#39;s just been under the usual weapon <br />camo errors.  <br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1282.png' | relative_url }}"><br />Thanks in advance!</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
+<p>Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.<br /><br />********************************************************************************<br /><br />UNRECOVERABLE ERROR:<br /><br />^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering<br /><br /><br />Linker will now terminate.<br /><br />********************************************************************************<br />has anyone seen it before? I&#39;ve peeked through all the materials and can&#39;t find anything out of the ordinary. it was originally <br />right after &#39;c_zom_dlc4_apothicon_fury_dissolve&#39; in the first error in the linker, but in subsequent links it&#39;s just been under the usual weapon <br />camo errors.  <br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1282.png' | relative_url }}"><br />Thanks in advance!</p>
 
-<p class="archive-post">You are missing materials <br /><br />Download my fx pack from devraw</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong></p>
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
 
-<p class="archive-post">So i downloaded and installed them last night. I thought I had them, but I guess I didn&#39;t or I had an older version. But the error persists :( <br />Same error as before &#39;fx combo texture&#39; something or other.. i also found this up above the usual weapon camo error. Unsure if it&#39;s related but anything that can help at this point :/<br /><br /><br /><br />^1Unable to open xcam file C:\Program Files (x86)\Steam\steamapps\common\Call of Duty Black Ops III\xanim_export\black_ops_3\xcams\ui_cam_cac_equip_shockcharge.xcam_export for xcam ui_cam_cac_equip_shockcharge.<br /><br /><br /><br />xcam:ui_cam_cac_equip_shockcharge<br /><br />weapon:electroball_grenade_zm<br /><br />csv:zm_ai_mechz.zpkg<br /><br />csv:zone_source/zm_dude.zone<br /><br /><br /><br />^1ERROR: &#39;veh_parasite&#39; is not a value vehiclesounddef asset<br /><br /><br /><br />vehiclesounddef:veh_parasite<br /><br />vehicle:spawner_bo3_dragon_whelp<br /><br />csv:hb21_hero_weapons.zpkg<br /><br />csv:zone_source/zm_dude.zone<br /><br /><br /><br />Thanks for everything you do for the community Harry! you the real MVP</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
+<p>You are missing materials <br /><br />Download my fx pack from devraw</p>
 
-<p class="archive-post">Drag the fx folders back from the other assets<br /><br />As for your other errors they won’t stop linker, just a missing image and xcam</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong></p>
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong>
 
-<p class="archive-post">Thanks a million Harry!!! Worked perfectly!</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">eDeK</span></span>:</strong></p>
+<p>So i downloaded and installed them last night. I thought I had them, but I guess I didn&#39;t or I had an older version. But the error persists :( <br />Same error as before &#39;fx combo texture&#39; something or other.. i also found this up above the usual weapon camo error. Unsure if it&#39;s related but anything that can help at this point :/<br /><br /><br /><br />^1Unable to open xcam file C:\Program Files (x86)\Steam\steamapps\common\Call of Duty Black Ops III\xanim_export\black_ops_3\xcams\ui_cam_cac_equip_shockcharge.xcam_export for xcam ui_cam_cac_equip_shockcharge.<br /><br /><br /><br />xcam:ui_cam_cac_equip_shockcharge<br /><br />weapon:electroball_grenade_zm<br /><br />csv:zm_ai_mechz.zpkg<br /><br />csv:zone_source/zm_dude.zone<br /><br /><br /><br />^1ERROR: &#39;veh_parasite&#39; is not a value vehiclesounddef asset<br /><br /><br /><br />vehiclesounddef:veh_parasite<br /><br />vehicle:spawner_bo3_dragon_whelp<br /><br />csv:hb21_hero_weapons.zpkg<br /><br />csv:zone_source/zm_dude.zone<br /><br /><br /><br />Thanks for everything you do for the community Harry! you the real MVP</p>
 
-<p class="archive-post">You solved this error?<br /><br />{% highlight php %}
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
+
+<p>Drag the fx folders back from the other assets<br /><br />As for your other errors they won’t stop linker, just a missing image and xcam</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">KillRideMasterJ</span></span>:</strong>
+
+<p>Thanks a million Harry!!! Worked perfectly!</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">eDeK</span></span>:</strong>
+
+<p>You solved this error?<br /><br />{% highlight php %}
 UNRECOVERABLE ERROR:
 
 ^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
 <br />I have the same error, how you solved?</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p class="archive-post"><div class="blockquote">You solved this error?<br /><br />{% highlight php %}
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
+
+<p><blockquote>You solved this error?<br /><br />{% highlight php %}
 UNRECOVERABLE ERROR:
 
 ^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
-<br />I have the same error, how you solved?<br /></div><br />Post the rest of it</p>
+<br />I have the same error, how you solved?<br /></blockquote><br />Post the rest of it</p>
