--- a/wiki/threads/3835.md
+++ b/wiki/threads/3835.md
@@ -2,6 +2,6 @@
 Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">BetiroVal</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">BetiroVal</span></span>:</strong>
 
-<p class="archive-post">Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1270.jpg' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1271.jpg' | relative_url }}"></p>
+<p>Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)<br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1270.jpg' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1271.jpg' | relative_url }}"></p>
