--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -2,12 +2,16 @@
 Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
 
-<p class="archive-post">Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.<br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1273.gif' | relative_url }}"><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1274.gif' | relative_url }}"><br /><br />This is my first time working with animations, so apologies if it&#39;s an easy fix.</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">eDeK</span></span>:</strong></p>
+<p>Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.<br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1273.gif' | relative_url }}"><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1274.gif' | relative_url }}"><br /><br />This is my first time working with animations, so apologies if it&#39;s an easy fix.</p>
 
-<p class="archive-post"><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe></p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong></p>
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">eDeK</span></span>:</strong>
 
-<p class="archive-post"><div class="blockquote"><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe><br /></div><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
+<p><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe></p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong>
+
+<p><blockquote><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe><br /></blockquote><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
