--- a/wiki/threads/3842.md
+++ b/wiki/threads/3842.md
@@ -2,18 +2,26 @@
 Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
 
-<p class="archive-post">Can someone please send me a panzer i need one(harrybo21 if you see this dm me discord Retarded Cat#6703)</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">D-2-K</span></span>:</strong></p>
+<p>Can someone please send me a panzer i need one(harrybo21 if you see this dm me discord Retarded Cat#6703)</p>
 
-<p class="archive-post"><a href="https://www.devraw.net/">this</a></p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong></p>
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">D-2-K</span></span>:</strong>
 
-<p class="archive-post"><div class="blockquote"><a href="https://www.devraw.net/">this</a><br /></div><br />My game crash using it even tho i did all steps</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
+<p><a href="https://www.devraw.net/">this</a></p>
 
-<p class="archive-post">you can use my AI. i did most of the main bosses from the game. check the list<br /><a href="https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/">https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/</a></p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong></p>
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
 
-<p class="archive-post"><div class="blockquote">you can use my AI. i did most of the main bosses from the game. check the list<br /><a href="https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/">https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/</a><br /></div><br />It really confused me i used it b4 but i couldnt know like how to set up panzer spawnpoint and stuff</p>
+<p><blockquote><a href="https://www.devraw.net/">this</a><br /></blockquote><br />My game crash using it even tho i did all steps</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
+
+<p>you can use my AI. i did most of the main bosses from the game. check the list<br /><a href="https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/">https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/</a></p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
+
+<p><blockquote>you can use my AI. i did most of the main bosses from the game. check the list<br /><a href="https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/">https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/</a><br /></blockquote><br />It really confused me i used it b4 but i couldnt know like how to set up panzer spawnpoint and stuff</p>
