--- a/wiki/threads/3845.md
+++ b/wiki/threads/3845.md
@@ -2,6 +2,6 @@
 Game Modding | Call of Duty: Black Ops 3 | Scripting
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">BobbyLee298</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">BobbyLee298</span></span>:</strong>
 
-<p class="archive-post">so on the early rounds when the zombs walk, by the time they reach the player they tend to die before the player get the chance to kill them.<br /><br />does anyone know how can i extend this cleanup kill zombie thing?</p>
+<p>so on the early rounds when the zombs walk, by the time they reach the player they tend to die before the player get the chance to kill them.<br /><br />does anyone know how can i extend this cleanup kill zombie thing?</p>
