--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -2,12 +2,16 @@
 Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong>
 
-<p class="archive-post">When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future<br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1279.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1280.png' | relative_url }}"></p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">D-2-K</span></span>:</strong></p>
+<p>When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future<br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1279.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1280.png' | relative_url }}"></p>
 
-<p class="archive-post">the problem is <br />they both use the same specialty names <br /><br />&quot;from banana colada GSH file&quot; <br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;</p>
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong></p>
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">D-2-K</span></span>:</strong>
 
-<p class="archive-post"><div class="blockquote">the problem is<br />they both use the same specialty names<br /><br />&quot;from banana colada GSH file&quot;<br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;<br /></div><br /><br />ok thank you now how exactly do I change that properly<br />Edit: (FIXED IT W)<br />[ATTACH alt=&quot;unknown (6).png&quot;]1281[/ATTACH]</p>
+<p>the problem is <br />they both use the same specialty names <br /><br />&quot;from banana colada GSH file&quot; <br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong>
+
+<p><blockquote>the problem is<br />they both use the same specialty names<br /><br />&quot;from banana colada GSH file&quot;<br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;<br /></blockquote><br /><br />ok thank you now how exactly do I change that properly<br />Edit: (FIXED IT W)<br />[ATTACH alt=&quot;unknown (6).png&quot;]1281[/ATTACH]</p>
