--- a/wiki/threads/3848.md
+++ b/wiki/threads/3848.md
@@ -2,6 +2,6 @@
 Game Modding | Call of Duty: Black Ops 3 | Scripting
 
 ---
-<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong></p>
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ShadingYT</span></span>:</strong>
 
-<p class="archive-post">[CENTER]How do i use spiki panzer? i did everything its only the radiant part remains[/CENTER]</p>
+<p>[CENTER]How do i use spiki panzer? i did everything its only the radiant part remains[/CENTER]</p>
