--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -100,3 +100,93 @@ Game Asset Reversing | Releases
 <strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
 
 <p>Dis error occurs becuase  the alias is set up wrong in my experience <br /><br />If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find <br /># &lt;------ that at the top. Remove it</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
+
+<p>Save compile let me know if it works</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
+
+<p>Nope<br /><br />that’s also my old sound alias - he’s missing a template</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
+
+<p>Or the templates been messed with, it happens lol</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
+
+<p>Like before the template there might be a # &lt;----</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
+
+<p><blockquote>Like before the template there might be a # &lt;----<br /></blockquote><br />No it’s a actual file that’s missing...<br /><br /># just comments the line out</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
+
+<p><blockquote>No it’s a actual file that’s missing...<br /><br /># just comments the line out<br /></blockquote><br />Ah okay cause I&#39;ve had the same issue and thats what caused it for some weird reson</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">mrnibbles14</span></span>:</strong>
+
+<p><blockquote>I keep getting this error can someone help<br /><br /><br /><br /><br />&quot;D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\sound\snd_convert.exe&quot;  pc usermaps\zm_eliguy_house usermaps\zm_eliguy_house zone_source usermaps\zm_eliguy_house english zm_eliguy_house<br /><br />ERROR: D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_airstaff_tornado<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_imp_lightningstaff<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias lightning_ball<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias shock_effect<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_freeze_zombie<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm_imp<br /><br /><br /><br />ERROR: d:\steamlibrary\steamapps\common\call of duty black ops iii\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_airstaff_tornado had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_imp_lightningstaff had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_airstaff_tornado had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_imp_lightningstaff had empty field DuckGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. lightning_ball had empty field VolumeGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. lightning_ball had empty field DuckGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. shock_effect had empty field VolumeGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. shock_effect had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.<br /></blockquote><br />I&#39;m having the same issue where could someone go to get this missing template?</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">RllyyTwitchyy</span></span>:</strong>
+
+<p>I followed the instructions and I get this error? Is this file missing? Because I checked the download again and the file was nowhere to be seen<br /><br />==================================================<br /><br /><br /><br /><br /><br />^1#using scripts\zm\_zm_weap_staff_souls;<br /><br /><br />^1--------------------------------------^<br /><br /><br />^1ERR(83) scripts/zm/zm_warfare.csc (32,39)  : Compiler Internal Error :  Compile error processing &quot;using&quot; file - file not found : scripts/zm/_zm_weap_staff_souls.csc</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
+
+<p><blockquote>I followed the instructions and I get this error? Is this file missing? Because I checked the download again and the file was nowhere to be seen<br /><br />==================================================<br /><br /><br /><br /><br /><br />^1#using scripts\zm\_zm_weap_staff_souls;<br /><br /><br />^1--------------------------------------^<br /><br /><br />^1ERR(83) scripts/zm/zm_warfare.csc (32,39)  : Compiler Internal Error :  Compile error processing &quot;using&quot; file - file not found : scripts/zm/_zm_weap_staff_souls.csc<br /></blockquote><br />Worked for me aside from some missing textures try downloading harry bo21 fx pack, you may have to ask him i don&#39;t think the link on here works anymore</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">mrlednor</span></span>:</strong>
+
+<p>ok iv installed them and thay are working but the issue i have is that in game the staff is in the plinths /soul chest and i cnt put the one that im honing in to it after doin the quest why is this ?</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">JEmerald174</span></span>:</strong>
+
+<p><blockquote><span style="font-size:1.5em;">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.<br />Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span><br /><br />The current state of these Staffs are W.I.P<br />However they are complete with sounds, animations and effects.<br />The only thing missing is the charge up sounds.<br />Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.<br /><br />You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.<br /><br />Here is a Youtube video showing the staves in action.<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/O5ADs6PvpAg" frameborder="0"></iframe><br /><br />Some changes have been made since.<br /><br />A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.<br /><br />HarryBo21&#39;s FX Library is required:<br /><a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a><br /><br />Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.<br /><br /><span style="font-size:1.5em;">Instructions for installation and upgrade steps are also included.</span><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.792.jpg' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.793.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.6em;">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span><br /><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.794.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.795.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.5em;">Staff Code Names</span><br />staff_fire_zm<br />staff_fire_upgraded_zm<br />staff_air_zm<br />staff_air_upgraded_zm<br />staff_lightning_zm<br />staff_lightning_upgraded_zm<br />staff_water_zm<br />staff_water_upgraded_zm<br /><br />Ex. /give staff_fire<br /><br /><br /><span style="font-size:1.5em;">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span><br /><br />------------------------------------------<br /><br />                   <span style="font-size:1.5em;"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span><br /><br />------------------------------------------<br /><br /><span style="font-size:1.5em;"><strong>Credits:</strong></span><br />AllModz<br />AndyWhelen<br />Azsry<br />BluntStuffy<br />Collie<br />DTZxPorter<br />Easyskanka<br />Erthrock<br />Frost Iceforge<br />GerardS0406<br />HarryBo21<br />HitmanVere<br />Hubashuba<br />IperBreach<br />JAMAKINBACONMAN<br />JBird632<br />JiffyNoodles<br />Lilrifa<br />MAKECENTS<br />MZSlayer<br />MadGaz<br />Magicman<br />Mathfag<br />NoobForLunch<br />PCModder<br />ProGamerzFTW<br />ProRevenge<br />Raptroes<br />RedSpace200<br />Scobalula<br />Sethnorris<br />Smasher248<br />StevieWonder87<br />Symbo<br />TheIronicTruth<br />TheSkyeLord<br />TomBMX<br />Treyarch and Activision<br />Will Luffey<br />WillJones1989<br />Yen466<br />Zeroy<br />alexbgt<br />thezombieproject<br /></blockquote><br />how do i make an account for T7 Mods? &#39;cause i wanna download the FX effect</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">mrlednor</span></span>:</strong>
+
+<p><blockquote>how do i make an account for T7 Mods? &#39;cause i wanna download the FX effect<br /></blockquote><br />u have to join the discord as last time i looked the server side to join was down or something along them lines</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Palkia98</span></span>:</strong>
+
+<p>Hello there, I wanted to ask if you could pass the upgrade function of the fire staff so that by killing the panzers I can upgrade it?<br />I was going to do a trigger damage but I see that I have so many things that I would not like to complicate it<br />thanks for sharing the staffs are the best I&#39;ve seen.<br />the only thing missing is that he had in the upgrade of the staffs the ray that makes others revive, but still it is the best</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bruhman</span></span>:</strong>
+
+<p>Hey, i get this error when i try launching my map, any help?<br />attempting to register ClientField widows_wine_wrapping in Clientfield set actor using 1 bits, but actor is out of space</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
+
+<p><blockquote>Hey, i get this error when i try launching my map, any help?<br />attempting to register ClientField widows_wine_wrapping in Clientfield set actor using 1 bits, but actor is out of space<br /></blockquote>which has exactly nothing to do with this asset or post<br /><br />You haven’t added windows wine properly</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bruhman</span></span>:</strong>
+
+<p><blockquote>which has exactly nothing to do with this asset or post<br /><br />You haven’t added windows wine properly<br /></blockquote><br />i removed the staffs and the error didnt show up, added them again and the error persisted, idk bddy</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
+
+<p><blockquote>i removed the staffs and the error didnt show up, added them again and the error persisted, idk bddy<br /></blockquote><br />My bad, it’s not a error with his thing tho<br /><br />There’s a clientfield limit and you are over it now by including this</p>
+
+---
+<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bruhman</span></span>:</strong>
+
+<p><blockquote>My bad, it’s not a error with his thing tho<br /><br />There’s a clientfield limit and you are over it now by including this<br /></blockquote><br />actually yeah, i realize now i had the same error on a separate map without the staffs, but alot of assets, ill remove some things and try it out again, i appreciate it.</p>
