bad format args

--- a/wiki/forums/10.md
+++ b/wiki/forums/10.md
@@ -2,6 +2,6 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3107.html' | relative_url }">OLDER MATERIALS CONVERSION (COD4\WAW\BO1) - Python Script</a></li>
-<li><a href="{ '/wiki/threads/3029.html' | relative_url }">(BO2) Hazmat Viewhands Skin</a></li>
+<li><a href="{{ '/wiki/threads/3107.html' | relative_url }}">OLDER MATERIALS CONVERSION (COD4\WAW\BO1) - Python Script</a></li>
+<li><a href="{{ '/wiki/threads/3029.html' | relative_url }}">(BO2) Hazmat Viewhands Skin</a></li>
 </ul>
