--- a/wiki/forums/11.md
+++ b/wiki/forums/11.md
@@ -2,5 +2,5 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3132.html' | relative_url }">Bannerlord .GTEX files</a></li>
+<li><a href="{{ '/wiki/threads/3132.html' | relative_url }}">Bannerlord .GTEX files</a></li>
 </ul>
