--- a/wiki/forums/14.md
+++ b/wiki/forums/14.md
@@ -2,6 +2,6 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3191.html' | relative_url }">Green run or Tranzit</a></li>
-<li><a href="{ '/wiki/threads/2615.html' | relative_url }">[Theory] CoD 2019 is a different story/universe than the Modern Warfare we already know</a></li>
+<li><a href="{{ '/wiki/threads/3191.html' | relative_url }}">Green run or Tranzit</a></li>
+<li><a href="{{ '/wiki/threads/2615.html' | relative_url }}">[Theory] CoD 2019 is a different story/universe than the Modern Warfare we already know</a></li>
 </ul>
