--- a/wiki/forums/26.md
+++ b/wiki/forums/26.md
@@ -2,6 +2,6 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3570.html' | relative_url }">Custom Perk Script</a></li>
-<li><a href="{ '/wiki/threads/2917.html' | relative_url }">Delete me</a></li>
+<li><a href="{{ '/wiki/threads/3570.html' | relative_url }}">Custom Perk Script</a></li>
+<li><a href="{{ '/wiki/threads/2917.html' | relative_url }}">Delete me</a></li>
 </ul>
