--- a/wiki/forums/27.md
+++ b/wiki/forums/27.md
@@ -2,6 +2,6 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3474.html' | relative_url }">Maya Help: CoD2 Grease Gun to BO</a></li>
-<li><a href="{ '/wiki/threads/3466.html' | relative_url }">How to get Tom_Bmx plugin work in Maya2020x64 ?</a></li>
+<li><a href="{{ '/wiki/threads/3474.html' | relative_url }}">Maya Help: CoD2 Grease Gun to BO</a></li>
+<li><a href="{{ '/wiki/threads/3466.html' | relative_url }}">How to get Tom_Bmx plugin work in Maya2020x64 ?</a></li>
 </ul>
