--- a/wiki/forums/32.md
+++ b/wiki/forums/32.md
@@ -2,5 +2,5 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/2519.html' | relative_url }">more then 32 surfaces error</a></li>
+<li><a href="{{ '/wiki/threads/2519.html' | relative_url }}">more then 32 surfaces error</a></li>
 </ul>
