--- a/wiki/forums/34.md
+++ b/wiki/forums/34.md
@@ -2,9 +2,9 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/2528.html' | relative_url }">Why are my animations all on 4 frames? please help</a></li>
-<li><a href="{ '/wiki/threads/2531.html' | relative_url }">ww2 sten seanims</a></li>
-<li><a href="{ '/wiki/threads/2530.html' | relative_url }">How to attach bo3 weapons to a rig ?</a></li>
-<li><a href="{ '/wiki/threads/2529.html' | relative_url }">Help me how to do scrolling textures as this map Zombie Dese</a></li>
-<li><a href="{ '/wiki/threads/2527.html' | relative_url }">How to port Infinite Warfare Weapons?</a></li>
+<li><a href="{{ '/wiki/threads/2528.html' | relative_url }}">Why are my animations all on 4 frames? please help</a></li>
+<li><a href="{{ '/wiki/threads/2531.html' | relative_url }}">ww2 sten seanims</a></li>
+<li><a href="{{ '/wiki/threads/2530.html' | relative_url }}">How to attach bo3 weapons to a rig ?</a></li>
+<li><a href="{{ '/wiki/threads/2529.html' | relative_url }}">Help me how to do scrolling textures as this map Zombie Dese</a></li>
+<li><a href="{{ '/wiki/threads/2527.html' | relative_url }}">How to port Infinite Warfare Weapons?</a></li>
 </ul>
