--- a/wiki/forums/41.md
+++ b/wiki/forums/41.md
@@ -2,6 +2,6 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3654.html' | relative_url }">An unhandled error occurred during export maya</a></li>
-<li><a href="{ '/wiki/threads/2623.html' | relative_url }">Material (Redirected from Vmt)</a></li>
+<li><a href="{{ '/wiki/threads/3654.html' | relative_url }}">An unhandled error occurred during export maya</a></li>
+<li><a href="{{ '/wiki/threads/2623.html' | relative_url }}">Material (Redirected from Vmt)</a></li>
 </ul>
