--- a/wiki/forums/9.md
+++ b/wiki/forums/9.md
@@ -2,20 +2,20 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3781.html' | relative_url }">Issues with loading CODTools Plugin in Maya</a></li>
-<li><a href="{ '/wiki/threads/3766.html' | relative_url }">xmodel to obj</a></li>
-<li><a href="{ '/wiki/threads/3712.html' | relative_url }">Use SP Animation in MP IW4</a></li>
-<li><a href="{ '/wiki/threads/3657.html' | relative_url }">COD  MW2 Characters</a></li>
-<li><a href="{ '/wiki/threads/3639.html' | relative_url }">Legion (Apex Legends Tool) - Is there a problem with POV (viewmodel) animations or am i doing wrong ?</a></li>
-<li><a href="{ '/wiki/threads/3585.html' | relative_url }">VEGA crashes on certain animation exports</a></li>
-<li><a href="{ '/wiki/threads/3582.html' | relative_url }">Infinite Warfare sounds not exporting properly</a></li>
-<li><a href="{ '/wiki/threads/3550.html' | relative_url }">For Honor 3d models</a></li>
-<li><a href="{ '/wiki/threads/3527.html' | relative_url }">Spawn Prop w/ reverse Gravity as part of Script?</a></li>
-<li><a href="{ '/wiki/threads/3491.html' | relative_url }">Reoriantion of x-models and rig in maya</a></li>
-<li><a href="{ '/wiki/threads/3438.html' | relative_url }">CODMW2 FPS hands and animations on unity</a></li>
-<li><a href="{ '/wiki/threads/3422.html' | relative_url }">call od duty 4 export buildings and maps</a></li>
-<li><a href="{ '/wiki/threads/3416.html' | relative_url }">DOOM (2016) Legs Animations</a></li>
-<li><a href="{ '/wiki/threads/3385.html' | relative_url }">Modern Warfare 2 weapon model export help</a></li>
-<li><a href="{ '/wiki/threads/3370.html' | relative_url }">Doom eternal Vega static models bug</a></li>
-<li><a href="{ '/wiki/threads/3230.html' | relative_url }">WWII import player animation</a></li>
+<li><a href="{{ '/wiki/threads/3781.html' | relative_url }}">Issues with loading CODTools Plugin in Maya</a></li>
+<li><a href="{{ '/wiki/threads/3766.html' | relative_url }}">xmodel to obj</a></li>
+<li><a href="{{ '/wiki/threads/3712.html' | relative_url }}">Use SP Animation in MP IW4</a></li>
+<li><a href="{{ '/wiki/threads/3657.html' | relative_url }}">COD  MW2 Characters</a></li>
+<li><a href="{{ '/wiki/threads/3639.html' | relative_url }}">Legion (Apex Legends Tool) - Is there a problem with POV (viewmodel) animations or am i doing wrong ?</a></li>
+<li><a href="{{ '/wiki/threads/3585.html' | relative_url }}">VEGA crashes on certain animation exports</a></li>
+<li><a href="{{ '/wiki/threads/3582.html' | relative_url }}">Infinite Warfare sounds not exporting properly</a></li>
+<li><a href="{{ '/wiki/threads/3550.html' | relative_url }}">For Honor 3d models</a></li>
+<li><a href="{{ '/wiki/threads/3527.html' | relative_url }}">Spawn Prop w/ reverse Gravity as part of Script?</a></li>
+<li><a href="{{ '/wiki/threads/3491.html' | relative_url }}">Reoriantion of x-models and rig in maya</a></li>
+<li><a href="{{ '/wiki/threads/3438.html' | relative_url }}">CODMW2 FPS hands and animations on unity</a></li>
+<li><a href="{{ '/wiki/threads/3422.html' | relative_url }}">call od duty 4 export buildings and maps</a></li>
+<li><a href="{{ '/wiki/threads/3416.html' | relative_url }}">DOOM (2016) Legs Animations</a></li>
+<li><a href="{{ '/wiki/threads/3385.html' | relative_url }}">Modern Warfare 2 weapon model export help</a></li>
+<li><a href="{{ '/wiki/threads/3370.html' | relative_url }}">Doom eternal Vega static models bug</a></li>
+<li><a href="{{ '/wiki/threads/3230.html' | relative_url }}">WWII import player animation</a></li>
 </ul>
