--- a/wiki/forums/2.md
+++ b/wiki/forums/2.md
@@ -2,7 +2,7 @@
 ---
 ## Threads:
 <ul>
-<li><a href="{ '/wiki/threads/3837.html' | relative_url }">Modme Forums closing 1/1/2022</a></li>
-<li><a href="{ '/wiki/threads/2654.html' | relative_url }">Standalone installer framework back online</a></li>
-<li><a href="{ '/wiki/threads/2618.html' | relative_url }">Mod downloads will make a return</a></li>
+<li><a href="{{ '/wiki/threads/3837.html' | relative_url }}">Modme Forums closing 1/1/2022</a></li>
+<li><a href="{{ '/wiki/threads/2654.html' | relative_url }}">Standalone installer framework back online</a></li>
+<li><a href="{{ '/wiki/threads/2618.html' | relative_url }}">Mod downloads will make a return</a></li>
 </ul>
